--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,10 @@
     ],
     "require": {
         "vlucas/phpdotenv": "^5.6"
+    },
+    "scripts": {
+        "postgresql:reset": "php utils/dbResetPostgresql.util.php",
+        "postgresql:seed": "php utils/dbSeederPostgresql.util.php",
+        "postgresql:migrate": "php utils/dbMigratePostgresql.util.php"
     }
 }
