--- a/composer.json
+++ b/composer.json
@@ -9,22 +9,23 @@
     "authors": [
         {
             "name": "Mikaelaa05",
-            "email": "202310289@fit.edu.ph",
-
+            "email": "202310289@fit.edu.ph"
+        },
+        {
             "name": "DrowningAnother",
-            "email": "202312208@fit.edu.ph",
-
+            "email": "202312208@fit.edu.ph"
+        },
+        {
             "name": "JamVSCode",
             "email": "202311934@fit.edu.ph"
-            ,
-
+        },
+        {
             "name": "H1H3",
-            "email": "202311499@fit.edu.ph",
-
-            
+            "email": "202311499@fit.edu.ph"
+        },
+        {
             "name": "Nobody-Afk",
             "email": "202312061@fit.edu.ph"
-            
         }
     ],
     "require": {
